--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="asset/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-success-subtle position-fixed z-1">
+    <nav class="navbar navbar-expand-lg navbar-light bg-success-subtle position-fixed z-3">
       <div class="container-fluid">
         <h1 class="navbar-brand text-info-emphasis ms-3">
           <b>Andria & Andria</b>
@@ -26,9 +26,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#">A propos</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Actions</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#">Soutien</a>
             </li>
@@ -53,7 +51,7 @@
             aria-labelledby="exampleModalLabel"
             aria-hidden="true"
           >
-            <div class="modal-dialog">
+            <div class="modal-dialog z-2 position-relative">
               <div class="modal-content">
                 <div class="modal-header">
                   <h1 class="modal-title fs-5" id="exampleModalLabel">
@@ -105,7 +103,7 @@
         </div>
       </div>
     </nav>
-    <section class="heroSection position-relative z-0">
+    <section class="heroSection position-relative">
       <h1 class="title col-6 text-info-emphasis">Bienvenue chez Andria & Andria</h1>
       <p class="introduction text-primary-emphasis">
         <span class="form "
@@ -122,6 +120,44 @@
 
       <div class="container"></div>
       <button class="proposition btn btn-success">Rejoignez-nous</button>
+    </section>
+    <section>
+      <main class="principe">
+        <div class="card mb-3 ms-4 mt-3" style="max-width: 540px; ">
+          <div class="row g-0">
+            <div class="col-md-4 mt-3">
+              <img src="asset/photos/Etude.jfif" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Nos valeurs</h5>
+                <p class="card-text">Nous croyons que la lutte contre la pauvreté nécessite une approche semblable à une guerre, 
+                  impliquant une discipline rigoureuse, une volonté de fer et des sacrifices.  <br>
+                   Andria & Andria soutient toutes les écoles qui partagent nos valeurs. <br> Chaque fois
+                  que la pauvreté nous frappe, nous répondons avec discipline, volonté et sacrifices équivalents.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card mb-3 cardForm " style="max-width: 540px; ">
+          <div class="row g-0">
+            <div class="col-md-4 mt-1">
+              <img src="asset/photos/children.jfif" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8 ">
+              <div class="card-body">
+                <h5 class="card-title">Notre mission </h5>
+                <p class="card-text">Nous œuvrons à l'échelle mondiale, concentrant nos 
+                  efforts sur les régions les plus touchées par la pauvreté et où l'éducation 
+                  est la plus fragile. <br>
+                   Notre première intervention se déroule à Madagascar, pays d'origine de nos fondateurs, 
+                  où nous travaillons sans relâche pour améliorer l'accès à une éducation de qualité.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </main>
     </section>
   </body>
 </html>
