feat: third section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="card mb-3 cardForm " style="max-width: 540px; ">
+        <div class="card mb-3 cardForm" style="max-width: 540px; ">
           <div class="row g-0">
             <div class="col-md-4 mt-1">
               <img src="asset/photos/children.jfif" class="img-fluid rounded-start" alt="...">
@@ -158,6 +158,62 @@
           </div>
         </div>
     </main>
+    </section>
+    <section class="soutien row gap-5 mt-5  d-flex justify-content-center align-items-center">
+
+      <div class="card" style="width: 18rem;">
+        <img src="asset/photos/logo.jpg" class="card-img-top" alt="logo d HEI">
+        <div class="card-body">
+          <h5 class="card-title">Soutenir un(e) étudiant(e) 
+            de la Haute École d'Informatique de Madagascar (HEI)</h5>
+          <p class="card-text">
+            En contribuant 50€ par mois pendant 10 mois, vous permettez à un(e)
+            étudiant(e) de la Haute École d'Informatique de Madagascar (HEI)
+            de couvrir ses frais de scolarité, son matériel pédagogique et ses
+            besoins essentiels pour une année complète. Ce soutien financier 
+             est crucial pour offrir à ces étudiants la possibilité de poursuivre
+             leurs études supérieures dans le domaine de l'informatique,
+             ouvrant ainsi des portes vers un avenir professionnel prometteur.
+          </p>
+          <a href="#" class="btn btn-primary">Participer</a>
+        </div>
+      </div>
+
+ <div class="card" style="width: 18rem;">
+        <img src="asset/photos/LEI-removebg-preview.png" class="card-img-top" alt="logo de LEI">
+        <div class="card-body">
+          <h5 class="card-title">Soutenir un(e) élève de l'École 
+            d'Informatique de Madagascar (LEI)
+          </h5>
+          <p class="card-text">
+            Avec une contribution de 20€ par mois pendant 6 mois, 
+            vous aidez un(e) élève de l'École d'Informatique de 
+            Madagascar (LEI) à se préparer efficacement pour entrer 
+            à la HEI. Ce soutien couvre les frais de cours, les ressources 
+            pédagogiques et les activités éducatives supplémentaires,
+             garantissant ainsi une transition réussie vers les études
+              supérieures et renforçant leur formation de base en informatique.
+          </p>
+          
+          <a href="#" class="btn btn-primary">Participer</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="asset/photos/images (5).jfif" class="card-img-top" alt="Logo d'Antsirabe">
+        <div class="card-body">
+          <h5 class="card-title">Soutenir un(e) élève du lycée Gallo Junior Antsirabe pendant une année scolaire</h5>
+          <p class="card-text">
+            En versant 30€ par mois pendant 10 mois, vous financez les études d'un(e) élève du lycée Gallo 
+            Junior Antsirabe. Ce soutien permet de couvrir les frais de scolarité, les manuels scolaires et 
+            les fournitures nécessaires, offrant ainsi aux élèves la stabilité et les ressources dont ils ont
+             besoin pour se concentrer pleinement sur leur éducation et se préparer à un avenir meilleur.
+             Votre contribution aide ces jeunes à atteindre leur plein potentiel académique et professionnel.
+          </p>
+          <a href="#" class="btn btn-primary">Participer</a>
+        </div>
+      </div>
+
     </section>
   </body>
 </html>
